weblate/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weblate
  labels:
    app: weblate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weblate
  strategy:
    type: Recreate # kill the old pod before starting a new one
  template:
    metadata:
      labels:
        app: weblate
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: weblate-persistent-storage
          persistentVolumeClaim:
            claimName: weblate-pvc
      containers:
        - name: weblate
          image: weblate/weblate:4
          volumeMounts:
            - name: weblate-persistent-storage
              mountPath: /app/data
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 1Gi
              cpu: 500m
            limits:
              memory: 3Gi
              cpu: 1000m
          startupProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            failureThreshold: 60 # 60x10 = 600s = 10min to startup
