weblate/kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-domain
spec:
  redirectRegex:
    regex: ^https?://weblate.djnd.si/(.*)
    replacement: https://weblate.danesjenovdan.si/${1}
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weblate
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: |
      traefik-redirect-to-https@kubernetescrd,
      weblate-redirect-domain@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - weblate.djnd.si
        - weblate.danesjenovdan.si
      secretName: weblate-tls
  rules:
    - host: weblate.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weblate
                port:
                  number: 8080
    - host: weblate.danesjenovdan.si
      http: *http_paths
